todo sans filtres

--- a/src/sass/_general.sass
+++ b/src/sass/_general.sass
@@ -1,9 +1,13 @@
-div
-  background-color: lightgrey
-
 #buttons 
   .active
     background-color: darken($danger, 10%)
 
 .h-32
   height: 32px
+
+.filter-font
+  font-size: 24px
+
+.barre
+  .divValid
+    text-decoration: line-through
