Fin de la todolist

--- a/src/sass/_general.sass
+++ b/src/sass/_general.sass
@@ -11,3 +11,11 @@
 .barre
   .divValid
     text-decoration: line-through
+
+.all-done
+  .norm
+    display: none
+
+.all-todo
+  .done
+    display: none
